[package]
authors     = [ "tamasf97 <tamasf97@outlook.com>" ]
description = "Procedural macros for the Verify library"
edition     = "2018"
license     = "MIT"
name        = "verify-macros"
repository  = "https://github.com/tamasfe/verify"
version     = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0"
proc-macro2      = "1.0"
quote            = "1.0"
syn              = "1.0"
