[package]
authors     = [ "tamasf97 <tamasf97@outlook.com>" ]
description = "A validation library"
edition     = "2018"
keywords    = [ "validation", "validate", "valid", "verify", "schema" ]
license     = "MIT"
name        = "verify"
repository  = "https://github.com/tamasfe/verify"
version     = "0.1.0"

[dependencies]
verify-macros = { version = "=0.1.0" }

serde      = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

# The name alias is to avoid conflict with the feature name.
schemars_crate = { package = "schemars", version = "0.8.0-alpha-2", optional = true }
smallvec_crate = { package = "smallvec", version = "1.0", optional = true }

regex = { version = "1.3", optional = true }

[features]
default = [ "smallvec" ]

schemars = [ "serde", "schemars_crate", "serde_json", "regex" ]
smallvec = [ "smallvec_crate" ]

[[test]]
name              = "schemars"
required-features = [ "schemars" ]

[[test]]
name              = "schemars_derive"
required-features = [ "schemars" ]
